--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "@types/node": "22.8.7",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.6.3"
   }
 }
