--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@react-google-maps/api": "^2.20.3",
+    "axios": "^1.7.7",
     "framer-motion": "^11.11.9",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@types/node": "22.8.7",
