--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.15",
     "react": "^18",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-spinners": "^0.14.1",
